--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zxx">
 <head>
-  <title>Day-1 - App Landing Page</title>
+  <title>YuHuStore - App Landing Page</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- owl carousel css --> 
@@ -18,7 +18,7 @@
   <nav class="navbar navbar-expand-md fixed-top">
     <div class="container">
       <!-- Brand -->
-      <a class="navbar-brand" href="index.html">DAY 1 Store</a>
+      <a class="navbar-brand" href="index.html">YuHu Store</a>
 
       <!-- Toggler/collapsibe Button -->
       <!-- <button class="navbar-toogler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
